--- a/css/readtheorg.css
+++ b/css/readtheorg.css
@@ -258,6 +258,30 @@ dl dd{
         margin: 0px;}
 }
 
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 90%;
+  height: 90%;
+  transform: translateX(-50%);
+}
+
+.video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
+
+.twitter-tweet {
+  margin: 30px auto 30px auto !important;
+}
+
 @media screen and (max-width: 768px){
 }
 
@@ -266,6 +290,10 @@ dl dd{
 
 @media screen and (max-width: 768px){
 
+  .video-container iframe {
+    width: 100%;
+    height: 100%;
+  }
     .tablet-hide{
         display:none}
 }
